Added paging + activity since

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
+# strava login info
 client_id=1234567
-client_secret=xxxxxxxxx
+client_secret=xxxxxzzzz
 refresh_token=xxxxxxx
+# cache expire time in minutes
 expire=60
+# password for cache refresh url
 force_refresh=6tuyfh456
+# strava id of activities to ignore
 ignore_activity = [678, 345, 123]
-show_activity_types = ["Walk"];
+# what activity types to show
+show_activity_types = ["Walk"]
+# show activities since
+# epoch time conversion online: https://www.epochconverter.com/
+activity_since = 1546300800
