--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
+# this is an example
 # strava login info
+# you need to change this!!!
 client_id=1234567
 client_secret=xxxxxzzzz
 refresh_token=xxxxxxx
+# password for internal stuff
+# change!
+app_key=6tuyfh456
+
+# stuff below this line you can leave, but you might want to change them
 # cache expire time in minutes
 expire=60
-# password for cache refresh url
-force_refresh=6tuyfh456
 # strava id of activities to ignore
 ignore_activity = [678, 345, 123]
 # what activity types to show
